--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="input-container">
-            <input type="number" id="monInput" placeholder="Entre un nombre">
+            <label for="monInput"></label><input type="number" id="monInput" placeholder="Entre un nombre">
             <button onclick="verifierNombre()" id="boutonVerifier">Vérifier</button>
         </div>
 
